--- a/llt/msprof_cpp/st/streamio/CMakeLists.txt
+++ b/llt/msprof_cpp/st/streamio/CMakeLists.txt
@@ -82,12 +82,19 @@ target_compile_options(client_stest PRIVATE
     -Wfloat-equal
     -Wextra
     -D_GLIBCXX_USE_CXX11_ABI=0
+    -fprofile-arcs
+    -ftest-coverage
 )
 
 target_compile_definitions(client_stest PRIVATE
     C_SEC
     MSPROF_DEBUG
     google=ascend_private
+)
+
+target_link_options(client_stest PRIVATE
+	-lgcov
+	--coverage
 )
 
 target_link_libraries(client_stest PRIVATE
