--- a/llt/msprof_cpp/st/driver/CMakeLists.txt
+++ b/llt/msprof_cpp/st/driver/CMakeLists.txt
@@ -51,12 +51,19 @@ target_compile_options(driver_stest PRIVATE
     -Wfloat-equal
     -Wextra
     -D_GLIBCXX_USE_CXX11_ABI=0
+    -fprofile-arcs
+    -ftest-coverage
 )
 
 target_compile_definitions(driver_stest PRIVATE
     C_SEC
     MSPROF_DEBUG
     google=ascend_private
+)
+
+target_link_options(driver_stest PRIVATE
+	-lgcov
+	--coverage
 )
 
 target_link_libraries(driver_stest PRIVATE
