--- a/llt/msprof_cpp/st/msprofbin/CMakeLists.txt
+++ b/llt/msprof_cpp/st/msprofbin/CMakeLists.txt
@@ -128,12 +128,19 @@ target_compile_options(msprof_bin_stest PRIVATE
     -Wfloat-equal
     -Wextra
     -D_GLIBCXX_USE_CXX11_ABI=0
+    -fprofile-arcs
+    -ftest-coverage
 )
 
 target_compile_definitions(msprof_bin_stest PRIVATE
     C_SEC
     __PROF_UT
     google=ascend_private
+)
+
+target_link_options(msprof_bin_stest PRIVATE
+	-lgcov
+	--coverage
 )
 
 target_link_libraries(msprof_bin_stest PRIVATE
