--- a/llt/msprof_cpp/ut/common/CMakeLists.txt
+++ b/llt/msprof_cpp/ut/common/CMakeLists.txt
@@ -78,12 +78,19 @@ target_compile_options(common_utest PRIVATE
     -Wfloat-equal
     -Wextra
     -D_GLIBCXX_USE_CXX11_ABI=0
+    -fprofile-arcs
+    -ftest-coverage
 )
 
 target_compile_definitions(common_utest PRIVATE
     C_SEC
     MSPROF_DEBUG
     google=ascend_private
+)
+
+target_link_options(common_utest PRIVATE
+	-lgcov
+	--coverage
 )
 
 target_link_libraries(common_utest PRIVATE
