--- a/llt/msprof_cpp/ut/device/CMakeLists.txt
+++ b/llt/msprof_cpp/ut/device/CMakeLists.txt
@@ -120,12 +120,19 @@ target_compile_options(device_utest PRIVATE
     -Wfloat-equal
     -Wextra
     -D_GLIBCXX_USE_CXX11_ABI=0
+    -fprofile-arcs
+    -ftest-coverage
 )
 
 target_compile_definitions(device_utest PRIVATE
     C_SEC
     MSPROF_DEBUG
     google=ascend_private
+)
+
+target_link_options(device_utest PRIVATE
+	-lgcov
+	--coverage
 )
 
 target_link_libraries(device_utest PRIVATE
