--- a/llt/msprof_cpp/ut/streamio/client/CMakeLists.txt
+++ b/llt/msprof_cpp/ut/streamio/client/CMakeLists.txt
@@ -69,12 +69,19 @@ target_compile_options(client_utest PRIVATE
     -Wfloat-equal
     -Wextra
     -D_GLIBCXX_USE_CXX11_ABI=0
+    -fprofile-arcs
+    -ftest-coverage
 )
 
 target_compile_definitions(client_utest PRIVATE
     C_SEC
     MSPROF_DEBUG
     google=ascend_private
+)
+
+target_link_options(client_utest PRIVATE
+	-lgcov
+	--coverage
 )
 
 target_link_libraries(client_utest PRIVATE
