--- a/llt/msprof_cpp/ut/streamio/common/CMakeLists.txt
+++ b/llt/msprof_cpp/ut/streamio/common/CMakeLists.txt
@@ -73,12 +73,19 @@ target_compile_options(streamio_common_utest PRIVATE
     -Wfloat-equal
     -Wextra
     -D_GLIBCXX_USE_CXX11_ABI=0
+    -fprofile-arcs
+    -ftest-coverage
 )
 
 target_compile_definitions(streamio_common_utest PRIVATE
     C_SEC
     MSPROF_DEBUG
     google=ascend_private
+)
+
+target_link_options(streamio_common_utest PRIVATE
+	-lgcov
+	--coverage
 )
 
 target_link_libraries(streamio_common_utest PRIVATE
