[SCH]Update code from hisi.
Match-id-8311a993a732850b8834ba75032582a670f85dd0

--- a/analysis/config/Tables.ini
+++ b/analysis/config/Tables.ini
@@ -696,3 +696,89 @@ pcie_id = INTEGER, null
 pcie_write_bandwidth = INTEGER, null
 pcie_read_bandwidth = INTEGER, null
 sys_time = INTEGER,null
+
+[LowPowerMap]
+sys_time = INTEGER,null
+sampling_times = INTEGER,null
+tem_of_ai_core = INTEGER,null
+tem_of_hbm = INTEGER,null
+tem_of_hbm_granularity = INTEGER,null
+tem_of_3ds_ram = INTEGER,null
+tem_of_cpu = INTEGER,null
+tem_of_peripherals = INTEGER,null
+tem_of_l2_buff = INTEGER,null
+aic_current_dpm = INTEGER,null
+power_consumption_dpm = INTEGER,null
+aic_current_sd5003 = INTEGER,null
+power_consumption_sd5003 = INTEGER,null
+pwr2prof_dat_imon = INTEGER,null
+pmc2prof_freq_prof = INTEGER,null
+tem_warn_cnt0 = INTEGER,null
+tem_warn_cnt1 = INTEGER,null
+tem_warn_cnt2 = INTEGER,null
+tem_warn_cnt3 = INTEGER,null
+cos_warn_cnt0 = INTEGER,null
+cos_warn_cnt1 = INTEGER,null
+cos_warn_cnt2 = INTEGER,null
+cos_warn_cnt3 = INTEGER,null
+io_warn_cnt0 = INTEGER,null
+io_warn_cnt1 = INTEGER,null
+io_warn_cnt2 = INTEGER,null
+io_warn_cnt3 = INTEGER,null
+epd_warn = INTEGER,null
+sft_samp_cfg = INTEGER,null
+voltage = INTEGER,null
+
+[Monitor0Map]
+stat_rcmd_num=INTEGER, null
+stat_wcmd_num=INTEGER, null
+stat_rlat_raw=INTEGER, null
+stat_wlat_raw=INTEGER, null
+stat_flux_rd=INTEGER, null
+stat_flux_wr=INTEGER, null
+stat_flux_rd_l2=INTEGER, null
+stat_flux_wr_l2=INTEGER, null
+timestamp=TEXT, null
+L2_cache_hit=INTEGER, null
+core_id=INTEGER, null
+group_id=INTEGER, null
+core_type=TEXT, null
+
+[Monitor1Map]
+vector_cycles=INTEGER, null
+scalar_cycles=INTEGER, null
+cube_cycles=INTEGER, null
+lsu0_cycles=INTEGER, null
+lsu1_cycles=INTEGER, null
+lsu2_cycles=INTEGER, null
+timestamp=TEXT, null
+core_id=INTEGER, null
+group_id=INTEGER, null
+core_type=TEXT, null
+
+[BiuFlowMap]
+timestamp=TEXT, null
+flow=INTEGER, null
+flow_type=TEXT, null
+unit_name=TEXT, null
+pid=INTEGER, null
+tid=INTEGER, null
+interval_start=INTEGER, null
+
+[BiuCyclesMap]
+timestamp=TEXT, null
+duration=INTEGER, null
+cycle_type=TEXT, null
+unit_name=TEXT, null
+cycle_num=INTEGER, null
+ratio=REAL, null
+pid=INTEGER, null
+tid=INTEGER, null
+interval_start=INTEGER, null
+
+[TaskTypeMap]
+timestamp=TEXT, null
+stream_id=INTEGER, null
+task_id=INTEGER, null
+task_type=TEXT, null
+task_state=INTEGER, null
