--- a/analysis/config/data_parsers.ini
+++ b/analysis/config/data_parsers.ini
@@ -133,6 +133,7 @@ chip_model = 0,1,2,3,4
 [ParseAiCpuDataAdapter]
 path = msparser.aicpu.parse_aicpu_data_adapter
 chip_model = 0,1,2,3,4
+level = 3
 
 [GeHostParser]
 path = msparser.ge.ge_host_parser
@@ -149,4 +150,12 @@ level = 2
 
 [StarsLogCalCulator]
 path = msparser.stars.stars_log_parser
+chip_model = 5
+
+[ParsingFftsAICoreSampleData]
+path = msparser.aic_sample.ai_core_sample_parser
+chip_model = 5
+
+[BiuPerfParser]
+path = msparser.biu_perf.biu_perf_parser
 chip_model = 5
