--- a/analysis/config/stars_config.ini
+++ b/analysis/config/stars_config.ini
@@ -27,3 +27,8 @@ table = InterSoc
 fmt = 011011
 db = chip_trans.db
 table = PaLinkInfo,PcieInfo
+
+[LowPowerParser]
+fmt = 011101
+db = lowpower.db
+table = LowPower
