--- a/analysis/config/data_calculator.ini
+++ b/analysis/config/data_calculator.ini
@@ -34,3 +34,7 @@ chip_model = 0,1,2,3,4
 path = mscalculate.ge.ge_hash_calculator
 chip_model = 0,1,2,3,4
 
+[BiuPerfCalculator]
+path = mscalculate.biu_perf.biu_perf_calculator
+chip_model = 5
+
