--- a/analysis/config/msprof_export_data.ini
+++ b/analysis/config/msprof_export_data.ini
@@ -56,7 +56,7 @@ table = L2CacheSummary
 unused_cols = device_id,task_type
 [step_trace]
 handler = _get_step_trace_data
-headers = Iteration ID,FP Start,BP End,Iteration End,Iteration Time(us),FP to BP Time(us),Grad Refresh Bound(us),Data Aug Bound(us)
+headers = Iteration ID,FP Start,BP End,Iteration End,Iteration Time(us),FP to BP Time(us),Iteration Refresh(us),Data Aug Bound(us)
 [aicpu]
 handler = _get_aicpu_data
 [dp]
@@ -195,3 +195,9 @@ handler = _get_stars_chip_trans_data
 db = chip_trans.db
 [thread_group]
 handler = _get_thread_group_data
+[low_power]
+handler = _get_low_power_data
+db = lowpower.db
+table = LowPower
+[biu_perf]
+handler = _get_biu_perf_timeline
