[ADD]Header file simplify.
Match-id-639f54ee682306dd231dcf4b848e906fe26b216b

--- a/collector/dvvp/CMakeLists.txt
+++ b/collector/dvvp/CMakeLists.txt
@@ -58,6 +58,7 @@ target_include_directories(stub_msprofiler PRIVATE
     ${TOP_DIR}/collector/dvvp/depend/inc/graphengine/external
     ${TOP_DIR}/collector/dvvp/depend/inc/metadef
     ${TOP_DIR}/collector/inc/external
+    ${TOP_DIR}/collector/dvvp/depend/inc/profapi
 )
 
 target_compile_options(stub_msprofiler PRIVATE
