[ADD]dlopen safety.
Match-id-fdecf48b8109b277d1014a04a276dfc6b552f0ba

--- a/collector/dvvp/msprofbin/CMakeLists.txt
+++ b/collector/dvvp/msprofbin/CMakeLists.txt
@@ -126,7 +126,7 @@ target_link_options(msprofbin PRIVATE
 )
 
 target_link_libraries(msprofbin PRIVATE
-    alog_static
+    alog
     c_sec
     ascend_protobuf_static
     -lpthread
