[CHG]switch stub to dlopen slog success.
Match-id-33596c4e9e9277bb3136ed96a5ef920c08992b59

--- a/collector/dvvp/msprofbin/CMakeLists.txt
+++ b/collector/dvvp/msprofbin/CMakeLists.txt
@@ -96,6 +96,7 @@ add_executable(msprofbin
     ../depend/src/mmpa_plugin.cpp
     ../depend/src/plugin_handle.cpp
     ../depend/src/driver_plugin.cpp
+    ../depend/src/slog_plugin.cpp
     ${hdcCpp}
     ${CppPath}
 )
@@ -126,7 +127,6 @@ target_link_options(msprofbin PRIVATE
 )
 
 target_link_libraries(msprofbin PRIVATE
-    alog
     c_sec
     ascend_protobuf_static
     -lpthread
