--- a/test/llt/msprof_cpp/ut/transport/CMakeLists.txt
+++ b/test/llt/msprof_cpp/ut/transport/CMakeLists.txt
@@ -54,6 +54,11 @@ target_include_directories(transport_utest PRIVATE
     ${TOP_DIR}/opensource/securec/include
     ${TOP_DIR}/opensource/json/include
     ${MSPROF_SOURCE_DIR}/dvvp/depend/inc/slog
+    ${TOP_DIR}/collector/inc/
+    ${TOP_DIR}/collector/inc/toolchain
+    ${TOP_DIR}/collector/inc/external
+    ${TOP_DIR}/collector/inc/external/acl
+    ${TOP_DIR}/collector/inc/external/ge
     ${MSPROF_SOURCE_DIR}/dvvp/depend/inc/metadef/error_manager/error_manager_stub
     ${MSPROF_SOURCE_DIR}/dvvp/depend/inc/driver
     ${MSPROF_SOURCE_DIR}/dvvp/depend/inc/adump
