--- a/test/msprof_cpp/ut/host/CMakeLists.txt
+++ b/test/msprof_cpp/ut/host/CMakeLists.txt
@@ -90,7 +90,8 @@ target_include_directories(host_utest PRIVATE
     ${MSPROF_SOURCE_DIR}/dvvp/aging 
     ${MSPROF_SOURCE_DIR}/dvvp/common 
     ${MSPROF_SOURCE_DIR}/dvvp/common/config 
-    ${MSPROF_SOURCE_DIR}/dvvp/common/logger 
+    # ${MSPROF_SOURCE_DIR}/dvvp/common/logger
+    ${TOP_DIR}/test/msprof_cpp/ut/stub/common/log/ 
     ${MSPROF_SOURCE_DIR}/dvvp/common/validation 
     ${MSPROF_SOURCE_DIR}/dvvp/common/statistics 
     ${MSPROF_SOURCE_DIR}/dvvp/host/include 
