--- a/test/msprof_cpp/ut/streamio/common/CMakeLists.txt
+++ b/test/msprof_cpp/ut/streamio/common/CMakeLists.txt
@@ -51,7 +51,8 @@ target_include_directories(streamio_common_utest PRIVATE
 	${MSPROF_SOURCE_DIR}/dvvp/ 
 	${MSPROF_SOURCE_DIR}/dvvp/common 
 	${MSPROF_SOURCE_DIR}/dvvp/common/config
-	${MSPROF_SOURCE_DIR}/dvvp/common/logger
+    ${TOP_DIR}/test/msprof_cpp/ut/stub/common/log/
+	# ${MSPROF_SOURCE_DIR}/dvvp/common/logger
 	${MSPROF_SOURCE_DIR}/dvvp/common/validation 
 	${MSPROF_SOURCE_DIR}/dvvp/aging 
 	${MSPROF_SOURCE_DIR}/dvvp/transport 
