fix ut test case
Match-id-7e3e78f1debc9546f44663e3e6087cb363b25319

--- a/test/msprof_cpp/ut/driver/CMakeLists.txt
+++ b/test/msprof_cpp/ut/driver/CMakeLists.txt
@@ -31,6 +31,7 @@ target_include_directories(driver_utest PRIVATE
     ${MSPROF_SOURCE_DIR}/dvvp/depend/inc/adump
     ${MSPROF_SOURCE_DIR}/dvvp/depend/inc/mmpa
     ${MSPROF_SOURCE_DIR}/dvvp/depend/inc/plugin
+    ${MSPROF_SOURCE_DIR}/dvvp/depend/inc/profapi
     ${MSPROF_SOURCE_DIR}/dvvp/depend/inc
     ${MSPROF_SOURCE_DIR}/../inc
     ${MSPROF_SOURCE_DIR}/dvvp 
