--- a/test/msprof_cpp/ut/msprof/CMakeLists.txt
+++ b/test/msprof_cpp/ut/msprof/CMakeLists.txt
@@ -115,6 +115,7 @@ target_include_directories(msprofiler_utest PRIVATE
     ${MSPROF_SOURCE_DIR}/dvvp/depend/inc/adump
     ${MSPROF_SOURCE_DIR}/dvvp/depend/inc/mmpa
     ${MSPROF_SOURCE_DIR}/dvvp/depend/inc/plugin
+    ${MSPROF_SOURCE_DIR}/dvvp/depend/inc/profapi
     ${MSPROF_SOURCE_DIR}/dvvp/depend/inc
     ${MSPROF_SOURCE_DIR}/../inc
 	${MSPROF_SOURCE_DIR}/dvvp/depend/inc/graphengine/external
@@ -257,6 +258,7 @@ target_include_directories(msprof_utest PRIVATE
 	${MSPROF_SOURCE_DIR}/dvvp/depend/inc/adump
 	${MSPROF_SOURCE_DIR}/dvvp/depend/inc/mmpa
 	${MSPROF_SOURCE_DIR}/dvvp/depend/inc/plugin
+    ${MSPROF_SOURCE_DIR}/dvvp/depend/inc/profapi
 	${MSPROF_SOURCE_DIR}/dvvp/depend/inc
 	${MSPROF_SOURCE_DIR}/../inc
 	${MSPROF_SOURCE_DIR}/dvvp/depend/inc/graphengine/external
