DTS:AR20220413030365,AR20220413030330,AR20220413030386 Description:slice timeline file
Team:HISI_TOOLS
Feature or Bugfix:Feature

Match-id-67e33cc26e39483b25717b72f9c51086bd3e34dd

--- a/analysis/config/Tables.ini
+++ b/analysis/config/Tables.ini
@@ -497,18 +497,18 @@ cpu_no=text,null
 usage=REAL,null
 
 [CpuUsageMap]
-start_time=text,null
+start_time=numeric,null
 end_time=text,null
 cpu_no=text,null
 usage=REAL,null
 
 [MemUsageMap]
-start_time=text,null
+start_time=numeric,null
 end_time=text,null
 usage=REAL,null
 
 [DiskUsageMap]
-start_time=text,null
+start_time=numeric,null
 end_time=text,null
 disk_read=text,null
 disk_write=text,null
@@ -516,7 +516,7 @@ swap_in=text,null
 usage=REAL,null
 
 [NetworkUsageMap]
-start_time=text,null
+start_time=numeric,null
 end_time=text,null
 usage=REAL,null
 
