--- a/test/msprof_cpp/ut/CMakeLists.txt
+++ b/test/msprof_cpp/ut/CMakeLists.txt
@@ -1,1 +1,10 @@
+add_subdirectory(transport) # done
+add_subdirectory(msprof) # done
+add_subdirectory(app) # done
 add_subdirectory(common) # done
+add_subdirectory(driver) # done
+add_subdirectory(job_wrapper) # done
+add_subdirectory(message)  # done
+add_subdirectory(streamio) # done
+add_subdirectory(msprofbin) # done
+add_subdirectory(stub_utest) # done
