--- a/test/msprof_cpp/ut/driver/CMakeLists.txt
+++ b/test/msprof_cpp/ut/driver/CMakeLists.txt
@@ -65,7 +65,7 @@ target_compile_definitions(driver_utest PRIVATE
 
 target_link_libraries(driver_utest PRIVATE
     ascend_protobuf_static
-    c_sec
+    c_sec_static
     pthread
     ${GTEST_STATIC_LIBRARY}
     ${MOCKCPP_STATIC_LIBRARY}
