--- a/test/msprof_cpp/ut/transport/CMakeLists.txt
+++ b/test/msprof_cpp/ut/transport/CMakeLists.txt
@@ -120,7 +120,7 @@ target_link_options(transport_utest PRIVATE
 
 target_link_libraries(transport_utest PRIVATE
     ascend_protobuf_static
-    c_sec
+    c_sec_static
     pthread
     ${GTEST_STATIC_LIBRARY}
     ${MOCKCPP_STATIC_LIBRARY}
