--- a/test/msprof_cpp/ut/streamio/common/CMakeLists.txt
+++ b/test/msprof_cpp/ut/streamio/common/CMakeLists.txt
@@ -92,7 +92,7 @@ target_link_options(streamio_common_utest PRIVATE
 
 target_link_libraries(streamio_common_utest PRIVATE
     ascend_protobuf_static
-    c_sec
+    c_sec_static
     pthread
     ${GTEST_STATIC_LIBRARY}
     ${MOCKCPP_STATIC_LIBRARY}
