for pytorch graph
Match-id-4fad57414c4dfa3356593063db648f146c8f48a8

--- a/analysis/config/Tables.ini
+++ b/analysis/config/Tables.ini
@@ -196,8 +196,8 @@ task_id=INTEGER,null
 stream_id=INTEGER,null
 waitTime=TEXT,null
 pendingTime=Text,null
-runTime=TEXT,null
-completeTime=TEXT,null
+running=TEXT,null
+complete=TEXT,null
 index_id=INTEGER,null
 model_id=INTEGER,null
 batch_id=INTEGER,null
@@ -782,3 +782,30 @@ stream_id=INTEGER, null
 task_id=INTEGER, null
 task_type=TEXT, null
 task_state=INTEGER, null
+
+[GeSummaryMap]
+model_id=INTEGER,null
+batch_id=INTEGER,null
+task_id=INTEGER,null
+stream_id=INTEGER,null
+op_name=TEXT,null
+op_type=TEXT,null
+block_dim=INTEGER,null
+task_type=TEXT,null
+timestamp=INTEGER,null
+index_id=INTEGER,null
+
+[GeTensorMap]
+model_id=INTEGER,null
+stream_id=INTEGER,null
+task_id=INTEGER,null
+tensor_num=INTEGER,null
+input_formats=TEXT,null
+input_data_types=TEXT,null
+input_shapes=TEXT,null
+output_formats=TEXT,null
+output_data_types=TEXT,null
+output_shapes=TEXT,null
+index_id=INTEGER,null
+timestamp=TEXT,null
+batch_id=INTEGER,null
