--- a/analysis/config/Tables_training.ini
+++ b/analysis/config/Tables_training.ini
@@ -9,7 +9,7 @@ stream_id=INTEGER,null
 waitTime=TEXT,null
 pendingTime=Text,null
 runTime=TEXT,null
-completeTime=TEXT,null
+complete=TEXT,null
 
 [TsOriginalDataMap]
 replayid=INTEGER,null
