--- a/analysis/config/tables_operator.ini
+++ b/analysis/config/tables_operator.ini
@@ -8,8 +8,8 @@ task_id=INTEGER,null
 stream_id=INTEGER,null
 waitTime=TEXT,null
 pendingTime=Text,null
-runTime=TEXT,null
-completeTime=TEXT,null
+running=TEXT,null
+complete=TEXT,null
 index_id=INTEGER,null
 batch_id=INTEGER,null
 
