--- a/analysis/config/Tables.ini
+++ b/analysis/config/Tables.ini
@@ -678,6 +678,17 @@ time_stamp=REAL, null
 start_time=REAL, null
 dur_time=INTEGER, null
 
+[AccPmuOriginMap]
+task_id=INTEGER, null
+stream_id=INTEGER, null
+acc_id=INTEGER,null
+block_id=INTEGER, null
+read_bandwidth=INTEGER, null
+write_bandwidth=INTEGER, null
+read_ost=INTEGER, null
+write_ost=INTEGER, null
+timestamp=REAL, null
+
 [ModelWithQMap]
 index_id = INTEGER, null
 model_id = INTEGER, null
