--- a/analysis/config/data_calculator.ini
+++ b/analysis/config/data_calculator.ini
@@ -38,3 +38,6 @@ chip_model = 0,1,2,3,4
 path = mscalculate.biu_perf.biu_perf_calculator
 chip_model = 5
 
+[AccPmuCalculator]
+path = mscalculate.stars.acc_pmu_calculate
+chip_model = 5
