--- a/analysis/config/msprof_export_data.ini
+++ b/analysis/config/msprof_export_data.ini
@@ -181,7 +181,7 @@ handler = _get_inter_soc_summary
 db = soc_profiler.db
 table = InterSoc
 headers = Metric,L2Buffer_bandwidth_level,MATA_bandwidth_level
-[acc_pmu_summary]
+[acc_pmu]
 handler = _get_acc_pmu
 db = soc_log.db
 table = AccPmu
