--- a/analysis/config/stars_config.ini
+++ b/analysis/config/stars_config.ini
@@ -16,7 +16,7 @@ table = FftsLog
 [AccPmuParser]
 fmt = 011010
 db = soc_log.db
-table = AccPmu
+table = AccPmuOrigin
 
 [InterSocParser]
 fmt = 011100
