for 1981 acc pmu
Match-id-d6f1ba8af1e806202cd7918b0675a16066636257

--- a/analysis/config/Tables.ini
+++ b/analysis/config/Tables.ini
@@ -674,7 +674,7 @@ read_bandwidth=INTEGER, null
 write_bandwidth=INTEGER, null
 read_ost=INTEGER, null
 write_ost=INTEGER, null
-time_stamp=REAL, null
+timestamp=REAL, null
 start_time=REAL, null
 dur_time=INTEGER, null
 
