timeline storage error
Match-id-9ce253160038f9d843921b2cf031f63faff0e0c1

--- a/analysis/config/Tables.ini
+++ b/analysis/config/Tables.ini
@@ -28,7 +28,7 @@ output_formats=TEXT,null
 output_data_types=TEXT,null
 output_shapes=TEXT,null
 index_id=INTEGER,null
-timestamp=TEXT,null
+timestamp=numeric,null
 batch_id=INTEGER,null
 
 [StepInfoMap]
@@ -194,8 +194,8 @@ apiRowId=INTEGER,null
 taskType=INTEGER,null
 task_id=INTEGER,null
 stream_id=INTEGER,null
-waitTime=TEXT,null
-pendingTime=Text,null
+waitTime=numeric,null
+pendingTime=numeric,null
 running=TEXT,null
 complete=TEXT,null
 index_id=INTEGER,null
@@ -281,7 +281,7 @@ dvppId=TEXT,null
 device_id=TEXT,null
 engineType=TEXT,null
 engineId=TEXT,null
-allTime=TEXT,null
+allTime=numeric,null
 allFrame=TEXT,null
 allUtilization=TEXT,null
 
@@ -488,8 +488,8 @@ cpu_num=INTEGER, null
 clk_jiffies=INTEGER, null
 
 [ProcessUsageMap]
-timestamp=text,null
-uptime=text,null
+timestamp=numeric,null
+uptime=numeric,null
 pid=INTEGER, null
 tid=INTEGER, null
 jiffies=INTEGER, null
@@ -498,18 +498,18 @@ usage=REAL,null
 
 [CpuUsageMap]
 start_time=numeric,null
-end_time=text,null
+end_time=numeric,null
 cpu_no=text,null
 usage=REAL,null
 
 [MemUsageMap]
 start_time=numeric,null
-end_time=text,null
+end_time=numeric,null
 usage=REAL,null
 
 [DiskUsageMap]
 start_time=numeric,null
-end_time=text,null
+end_time=numeric,null
 disk_read=text,null
 disk_write=text,null
 swap_in=text,null
@@ -749,7 +749,7 @@ stat_flux_rd=INTEGER, null
 stat_flux_wr=INTEGER, null
 stat_flux_rd_l2=INTEGER, null
 stat_flux_wr_l2=INTEGER, null
-timestamp=TEXT, null
+timestamp=numeric, null
 L2_cache_hit=INTEGER, null
 core_id=INTEGER, null
 group_id=INTEGER, null
@@ -762,13 +762,13 @@ cube_cycles=INTEGER, null
 lsu0_cycles=INTEGER, null
 lsu1_cycles=INTEGER, null
 lsu2_cycles=INTEGER, null
-timestamp=TEXT, null
+timestamp=numeric, null
 core_id=INTEGER, null
 group_id=INTEGER, null
 core_type=TEXT, null
 
 [BiuFlowMap]
-timestamp=TEXT, null
+timestamp=numeric, null
 flow=INTEGER, null
 flow_type=TEXT, null
 unit_name=TEXT, null
@@ -777,7 +777,7 @@ tid=INTEGER, null
 interval_start=INTEGER, null
 
 [BiuCyclesMap]
-timestamp=TEXT, null
+timestamp=numeric, null
 duration=INTEGER, null
 cycle_type=TEXT, null
 unit_name=TEXT, null
@@ -788,7 +788,7 @@ tid=INTEGER, null
 interval_start=INTEGER, null
 
 [TaskTypeMap]
-timestamp=TEXT, null
+timestamp=numeric, null
 stream_id=INTEGER, null
 task_id=INTEGER, null
 task_type=TEXT, null
@@ -818,5 +818,5 @@ output_formats=TEXT,null
 output_data_types=TEXT,null
 output_shapes=TEXT,null
 index_id=INTEGER,null
-timestamp=TEXT,null
+timestamp=numeric,null
 batch_id=INTEGER,null
