--- a/analysis/config/Tables.ini
+++ b/analysis/config/Tables.ini
@@ -639,7 +639,7 @@ duration=REAL, null
 notify_id=INTEGER, null
 stage=INTEGER, null
 step=INTEGER, null
-bandwidth=TEXT, null
+bandwidth=REAL, null
 stream_id=INTEGER, null
 task_id=INTEGER, null
 task_type=TEXT, null
