DTS:DTS2022053000891 Description:dlopen性能优化
Team:HISI_TOOLS
Feature or Bugfix:Bugfix

Match-id-5a783795706ca53965a4e2ebc095bce236c028a4

--- a/test/msprof_cpp/ut/common/CMakeLists.txt
+++ b/test/msprof_cpp/ut/common/CMakeLists.txt
@@ -16,6 +16,7 @@ set(profilerSrcFiles
     ${MSPROF_SOURCE_DIR}//dvvp/driver/channel/ai_drv_prof_api.cpp
     ${MSPROF_SOURCE_DIR}//dvvp/message/codec.cpp
     ${MSPROF_SOURCE_DIR}/dvvp/depend/stub/error_manager/msprof_error_manager_stub.cpp
+    ${MSPROF_SOURCE_DIR}/dvvp/depend/src/plugin_handle.cpp
     ${CppPath}
 )
 
