--- a/test/msprof_cpp/ut/transport/CMakeLists.txt
+++ b/test/msprof_cpp/ut/transport/CMakeLists.txt
@@ -26,6 +26,7 @@ set(profilerSrcFiles
     ${MSPROF_SOURCE_DIR}/dvvp/transport/hdc/hdc_transport.cpp 
     ${MSPROF_SOURCE_DIR}/dvvp/common/validation/param_validation.cpp
     ${MSPROF_SOURCE_DIR}/dvvp/depend/stub/error_manager/msprof_error_manager_stub.cpp
+    ${MSPROF_SOURCE_DIR}/dvvp/depend/src/plugin_handle.cpp
     ${CppPath}
 )
 
