timeline storage error
Match-id-1738f870f36f3049139369b73d4566b8c7a6f0aa

--- a/analysis/config/Tables_training.ini
+++ b/analysis/config/Tables_training.ini
@@ -6,14 +6,14 @@ apiRowId=INTEGER,null
 taskType=INTEGER,null
 task_id=INTEGER,null
 stream_id=INTEGER,null
-waitTime=TEXT,null
-pendingTime=Text,null
-runTime=TEXT,null
+waitTime=NUMERIC,null
+pendingTime=NUMERIC,null
+runTime=NUMERIC,null
 complete=TEXT,null
 
 [TsOriginalDataMap]
 replayid=INTEGER,null
-timestamp=numeric,null
+timestamp=NUMERIC,null
 pc=TEXT,null
 callstack=TEXT,null
 event=TEXT,null
