--- a/analysis/config/tables_operator.ini
+++ b/analysis/config/tables_operator.ini
@@ -6,8 +6,8 @@ apiRowId=INTEGER,null
 taskType=INTEGER,null
 task_id=INTEGER,null
 stream_id=INTEGER,null
-waitTime=TEXT,null
-pendingTime=Text,null
+waitTime=NUMERIC,null
+pendingTime=NUMERIC,null
 running=TEXT,null
 complete=TEXT,null
 index_id=INTEGER,null
@@ -76,7 +76,7 @@ op_name=text,null
 op_type=text,null
 block_dim=INTEGER,null
 task_type=text,null
-timestamp=TEXT,null
+timestamp=NUMERIC,null
 batch_id=INTEGER,null
 
 [TensorGeMap]
@@ -91,5 +91,5 @@ output_formats=TEXT,null
 output_data_types=TEXT,null
 output_shapes=TEXT,null
 index_id=INTEGER,null
-timestamp=TEXT,null
+timestamp=NUMERIC,null
 batch_id=INTEGER,null
