timeline storage error
Match-id-ee3d2e6b1ca6d98216335c1c2499d0dda6f3972c

--- a/analysis/config/Tables.ini
+++ b/analysis/config/Tables.ini
@@ -194,8 +194,8 @@ apiRowId=INTEGER,null
 taskType=INTEGER,null
 task_id=INTEGER,null
 stream_id=INTEGER,null
-waitTime=NUMERIC,null
-pendingTime=NUMERIC,null
+waitTime=TEXT,null
+pendingTime=Text,null
 running=TEXT,null
 complete=TEXT,null
 index_id=INTEGER,null
@@ -204,7 +204,7 @@ batch_id=INTEGER,null
 
 [TsOriginalDataMap]
 replayid=INTEGER,null
-timestamp=NUMERIC,null
+timestamp=numeric,null
 pc=TEXT,null
 callstack=TEXT,null
 event=TEXT,null
@@ -215,7 +215,7 @@ function=TEXT,null
 [AICoreOriginalDataMap]
 mode=INTEGER,null
 replayid=INTEGER,null
-timestamp=NUMERIC,null
+timestamp=numeric,null
 coreid=INTEGER,null
 task_cyc=Text,null
 event1=Text,null
@@ -281,7 +281,7 @@ dvppId=TEXT,null
 device_id=TEXT,null
 engineType=TEXT,null
 engineId=TEXT,null
-allTime=NUMERIC,null
+allTime=TEXT,null
 allFrame=TEXT,null
 allUtilization=TEXT,null
 
@@ -488,8 +488,8 @@ cpu_num=INTEGER, null
 clk_jiffies=INTEGER, null
 
 [ProcessUsageMap]
-timestamp=NUMERIC,null
-uptime=NUMERIC,null
+timestamp=text,null
+uptime=text,null
 pid=INTEGER, null
 tid=INTEGER, null
 jiffies=INTEGER, null
@@ -497,27 +497,27 @@ cpu_no=text,null
 usage=REAL,null
 
 [CpuUsageMap]
-start_time=NUMERIC,null
-end_time=NUMERIC,null
+start_time=numeric,null
+end_time=text,null
 cpu_no=text,null
 usage=REAL,null
 
 [MemUsageMap]
-start_time=NUMERIC,null
-end_time=NUMERIC,null
+start_time=numeric,null
+end_time=text,null
 usage=REAL,null
 
 [DiskUsageMap]
-start_time=NUMERIC,null
-end_time=NUMERIC,null
+start_time=numeric,null
+end_time=text,null
 disk_read=text,null
 disk_write=text,null
 swap_in=text,null
 usage=REAL,null
 
 [NetworkUsageMap]
-start_time=NUMERIC,null
-end_time=NUMERIC,null
+start_time=numeric,null
+end_time=text,null
 usage=REAL,null
 
 [SyscallMap]
@@ -749,7 +749,7 @@ stat_flux_rd=INTEGER, null
 stat_flux_wr=INTEGER, null
 stat_flux_rd_l2=INTEGER, null
 stat_flux_wr_l2=INTEGER, null
-timestamp=NUMERIC, null
+timestamp=TEXT, null
 L2_cache_hit=INTEGER, null
 core_id=INTEGER, null
 group_id=INTEGER, null
@@ -762,13 +762,13 @@ cube_cycles=INTEGER, null
 lsu0_cycles=INTEGER, null
 lsu1_cycles=INTEGER, null
 lsu2_cycles=INTEGER, null
-timestamp=NUMERIC, null
+timestamp=TEXT, null
 core_id=INTEGER, null
 group_id=INTEGER, null
 core_type=TEXT, null
 
 [BiuFlowMap]
-timestamp=NUMERIC, null
+timestamp=TEXT, null
 flow=INTEGER, null
 flow_type=TEXT, null
 unit_name=TEXT, null
@@ -777,7 +777,7 @@ tid=INTEGER, null
 interval_start=INTEGER, null
 
 [BiuCyclesMap]
-timestamp=NUMERIC, null
+timestamp=TEXT, null
 duration=INTEGER, null
 cycle_type=TEXT, null
 unit_name=TEXT, null
@@ -788,7 +788,7 @@ tid=INTEGER, null
 interval_start=INTEGER, null
 
 [TaskTypeMap]
-timestamp=NUMERIC, null
+timestamp=TEXT, null
 stream_id=INTEGER, null
 task_id=INTEGER, null
 task_type=TEXT, null
@@ -818,5 +818,5 @@ output_formats=TEXT,null
 output_data_types=TEXT,null
 output_shapes=TEXT,null
 index_id=INTEGER,null
-timestamp=NUMERIC,null
+timestamp=TEXT,null
 batch_id=INTEGER,null
