--- a/analysis/config/Tables_training.ini
+++ b/analysis/config/Tables_training.ini
@@ -6,14 +6,14 @@ apiRowId=INTEGER,null
 taskType=INTEGER,null
 task_id=INTEGER,null
 stream_id=INTEGER,null
-waitTime=NUMERIC,null
-pendingTime=NUMERIC,null
-runTime=NUMERIC,null
+waitTime=TEXT,null
+pendingTime=Text,null
+runTime=TEXT,null
 complete=TEXT,null
 
 [TsOriginalDataMap]
 replayid=INTEGER,null
-timestamp=NUMERIC,null
+timestamp=numeric,null
 pc=TEXT,null
 callstack=TEXT,null
 event=TEXT,null
