--- a/analysis/config/Tables.ini
+++ b/analysis/config/Tables.ini
@@ -102,7 +102,7 @@ replayid=int,none
 [ApiCallMap]
 entry_time=INTEGER,null
 exit_time=INTEGER,null
-api=INTEGER,null
+api=TEXT,null
 retcode=INTEGER,null
 thread=INTEGER,null
 stream_id=INTEGER,null
