--- a/test/msprof_cpp/ut/msprof/CMakeLists.txt
+++ b/test/msprof_cpp/ut/msprof/CMakeLists.txt
@@ -12,7 +12,7 @@ set(profilerSrcList
 	${MSPROF_SOURCE_DIR}/dvvp/analyze/src/analyzer.cpp
 	${MSPROF_SOURCE_DIR}/dvvp/analyze/src/analyzer_base.cpp
 	${MSPROF_SOURCE_DIR}/dvvp/analyze/src/analyzer_ge.cpp
-        ${MSPROF_SOURCE_DIR}/dvvp/analyze/src/analyzer_ffts.cpp
+    ${MSPROF_SOURCE_DIR}/dvvp/analyze/src/analyzer_ffts.cpp
 	${MSPROF_SOURCE_DIR}/dvvp/analyze/src/analyzer_hwts.cpp
 	${MSPROF_SOURCE_DIR}/dvvp/analyze/src/analyzer_ts.cpp
 	${MSPROF_SOURCE_DIR}/dvvp/analyze/src/op_desc_parser.cpp
@@ -132,7 +132,6 @@ target_include_directories(msprofiler_utest PRIVATE
 	${MSPROF_SOURCE_DIR}/dvvp/msprof/include
 	${MSPROF_SOURCE_DIR}/dvvp/common
 	${MSPROF_SOURCE_DIR}/dvvp/common/errno
-	#${MSPROF_SOURCE_DIR}/dvvp/common/logger
     ${TOP_DIR}/test/msprof_cpp/ut/stub/common/log/
 	${MSPROF_SOURCE_DIR}/dvvp/common/validation
 	${MSPROF_SOURCE_DIR}/dvvp/common/queue
@@ -151,7 +150,6 @@ target_include_directories(msprofiler_utest PRIVATE
 	${MSPROF_SOURCE_DIR}/dvvp/job_wrapper/include
 	${MSPROF_SOURCE_DIR}/dvvp/adx/inc	
 	${TOP_DIR}/graphengine/inc/external
-	#${TOP_DIR}/graphengine/inc/framework/common
 	${TOP_DIR}/inc
 	${TOP_DIR}/inc/driver
 	${TOP_DIR}/inc/external
@@ -217,8 +215,9 @@ add_executable(msprof_utest
 	../stub/devdrv_runtime_api_stub.cpp
 	../stub/profile_drv_user_stub.cpp
 	../stub/hdc-api-stub.cpp
+	../stub/ide-cmd-stub.cpp
 	../../stub/driver_plugin_stub.cpp
-	${MSPROF_SOURCE_DIR}/dvvp/adx/stub_lhisi/adx_prof_api.cpp
+	${MSPROF_SOURCE_DIR}/dvvp/adx/stub/adx_prof_api.cpp
 	${MSPROF_SOURCE_DIR}/dvvp/common/config/config_manager.cpp
     ${MSPROF_SOURCE_DIR}/dvvp/common/memory/chunk_pool.cpp
     ${MSPROF_SOURCE_DIR}/dvvp/common/statistics/perf_count.cpp
@@ -248,11 +247,11 @@ target_include_directories(msprof_utest PRIVATE
 	${MOCKCPP_INCLUDE_DIR}
 	${TOP_DIR}/platform/securec/include
 	${TOP_DIR}/opensource/json/include
-        ${TOP_DIR}/collector/inc/
-        ${TOP_DIR}/collector/inc/toolchain/
-        ${TOP_DIR}/collector/inc/external/
-        ${TOP_DIR}/collector/inc/external/acl
-        ${TOP_DIR}/collector/inc/external/ge
+    ${TOP_DIR}/collector/inc/
+    ${TOP_DIR}/collector/inc/toolchain/
+    ${TOP_DIR}/collector/inc/external/
+    ${TOP_DIR}/collector/inc/external/acl
+    ${TOP_DIR}/collector/inc/external/ge
 	${MSPROF_SOURCE_DIR}/dvvp/depend/inc/slog
 	${MSPROF_SOURCE_DIR}/dvvp/depend/inc/metadef/error_manager/error_manager_stub
 	${MSPROF_SOURCE_DIR}/dvvp/depend/inc/driver
@@ -273,7 +272,6 @@ target_include_directories(msprof_utest PRIVATE
 	${MSPROF_SOURCE_DIR}/dvvp/common
 	${MSPROF_SOURCE_DIR}/dvvp/common/validation
 	${MSPROF_SOURCE_DIR}/dvvp/common/errno
-	#${MSPROF_SOURCE_DIR}/dvvp/common/logger
     ${TOP_DIR}/test/msprof_cpp/ut/stub/common/log/
 	${MSPROF_SOURCE_DIR}/dvvp/common/queue
 	${MSPROF_SOURCE_DIR}/dvvp/common/singleton
