【DTS2022062500255】dataTypeConfig打印整改+Debug本地编译
Match-id-849088bd21258686b9eb93fa58a9f2b5b335ebb1

--- a/collector/dvvp/msprofbin/CMakeLists.txt
+++ b/collector/dvvp/msprofbin/CMakeLists.txt
@@ -127,7 +127,7 @@ target_link_options(msprofbin PRIVATE
     -Wl,-Bsymbolic
     -Wl,--exclude-libs=ALL
     -pie
-    -s
+    $<$<NOT:$<STREQUAL:${CMAKE_BUILD_TYPE},Debug>>:-s>
 )
 
 target_link_libraries(msprofbin PRIVATE
