TimePaser to parser
Match-id-a55bcad937f62c0c12e3df980781872ff4af2826

--- a/analysis/config/data_parsers.ini
+++ b/analysis/config/data_parsers.ini
@@ -159,3 +159,8 @@ chip_model = 5
 [BiuPerfParser]
 path = msparser.biu_perf.biu_perf_parser
 chip_model = 5
+
+[MsTimeParser]
+path = msparser.ms_timer.ms_time_parser
+chip_model = 0,1,2,3,4,5
+
