timeparser to parser
Match-id-567115038e8aa5ecbd91cae71ec8fbfd99eb8599

--- a/analysis/config/Tables.ini
+++ b/analysis/config/Tables.ini
@@ -821,7 +821,7 @@ index_id=INTEGER,null
 timestamp=TEXT,null
 batch_id=INTEGER,null
 
-[timeMap]
+[TimeMap]
 device_id=INTEGER,null
 dev_mon=INTEGER,null
 dev_wall=INTEGER,null
