for op st rdv err
Match-id-8002fd11a25382a25d8d714445dfea6922c10895

--- a/analysis/config/data_parsers.ini
+++ b/analysis/config/data_parsers.ini
@@ -129,6 +129,7 @@ chip_model = 0,1,2,3,4
 [RunTimeApiParser]
 path = msparser.runtime.runtime_api_parser
 chip_model = 0,1,2,3,4
+level = 2
 
 [ParseAiCpuDataAdapter]
 path = msparser.aicpu.parse_aicpu_data_adapter
